--- a/index.css
+++ b/index.css
@@ -3,33 +3,6 @@
     box-sizing: border-box;
     
 }
-body{
-    color: #238A43;
-}
-.img-1{
-    position: absolute;
-    width: 1032px;
-    height: 1097px;
-    left: -553px;
-    top: -108px;
-    background: #95322C;
-    opacity: 0.1;
-    filter: blur(255px);
-    transform: rotate(30deg);
-    border-radius: 0px;
-
-}
-.img-2{
-    background: #2C954D;
-    position: absolute;
-    width: 28%;
-    height: 108%;
-    left: 53%;
-    top: -62%;
-    opacity: 0.1;
-    filter: blur(255px);
-    transform: rotate(30deg);
-}
 .navbar{
     padding: 1rem 0 !important;
     
@@ -53,434 +26,197 @@ text-align: left;
 padding-right: 2px !important;
 
 }
-.active{
-    color: #238A43 !important;
+button a {
+    color:white;
+    text-decoration: none;
+}
+button :hover {
+    color:white !important;
+}
+.active-nav{
+    color: #f54d74 !important;
     border-bottom: 2px solid;
+    background: none;
 }
 .nav-item{
     padding: 5px;
     color: #3D3D3D !important;
 }
 .nav-item :hover{
-    border-bottom: 2px solid #238A43;
+    border-bottom: 2px solid #f54d74;
+    color: #f54d74 !important;
 }
-.card{
-    border: none !important;
-    background: none !important;
-   
+body{
+    background: #FBFBFB !important;
+    margin-bottom: 50px !important;
 }
-
-.jumbotron >h1{
-    font-variant: all-small-caps;
-    font-size: 149px;
-    font-family: Bebas Neue;
-    font-weight: 700;
-    line-height: 149px;
-    margin: 15px 0px;
-    /* text-align: center; */
-
-   
-}
-.btn{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 26px 35px 25px !important;
-    background: #238A43 !important;
-    border: none !important;
-    color: #FFFFFF !important;
-    font-family: Bebas Neue;
-    font-size: 24px !important;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 34px;
-    letter-spacing: 0.15em;
-    border-radius: 0 !important;
-
-
-
-}
-.card_wrapper{
-    position: absolute;
-    /* width: 100%; */
-    /* height: 100%; */
-    top: 600px !important;
-    padding: 0px 10%;
-}
-.card-img-overlay { 
-    padding: 15px !important; 
-    font-family: 'Bebas Neue';
-    border-radius: 0px !important;
-    background-color: #fff;
-    height: 100%;
-    position: initial !important;
-}
-.img-text-bg{
-    background: #F8DCCC;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.img-text{
-    font-size: 44px !important;
-}
-.img-text-desc{
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 170%;
-    color: #3D3D3D;
-    flex: none;
-order: 0;
-flex-grow: 0;
-margin: 15px 0px;
-}
-.list-group-item{
-    background: #FFEFD7 !important;
-    border: none !important;
-    margin: 3px 8px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 5px 15px !important;
+.contant-heading{
     
 }
-.list-group-item img{
-    margin-right: 10px;
+.heading-top{
+    
+text-align: left;
+font: 25px Montserrat;
+letter-spacing: 0px;
+color: #222222;
+margin-top: 240px;
 
 }
-.list-group-item .cannabis_img{
-    height: 26px;
-    width: 26px;
+.main-heading{
+    font: var(--unnamed-font-style-normal) normal bold 58px/65px Montserrat;
+text-align: left;
+font: normal normal bold 58px/65px Montserrat;
+letter-spacing: 0px;
+width: 80%;
 }
-.list-group-item .Hemp_img{
-width: 28px;
-height: 29px;
+.main-heading>span{
+    color: #FF6F61;
 }
-.list-group-item .Pschedelics_img{
-height: 33px;
-width: 33px;
+.section-one-img{
+    margin-top: 113px;
 }
-.list-group-item .yoga_img{
-    height: 37px;
-    width: 32px;
+.mobile-img-1{
+    position:absolute;
+    background: transparent url('./img/Ellipse\ 12.png') 0% 0% no-repeat padding-box;
+    
+
+}
+.img-2 {
+    position: relative;
+    top: 0;
+    left: 208px;
+}
+.img-3{
+    position: relative;
+    top: 180px;
+    left: 192px;
+    opacity: 0.4;
+}
+.img-4{
+    position: relative;
+    top: 270px;
+    left: -423px;
+    opacity: 0.5;
+}
+.button{
+    background: transparent linear-gradient(90deg, var(--unnamed-color-ff6f61) 0%, #FF867A 100%) 0% 0% no-repeat padding-box;
+background: transparent linear-gradient(90deg, #FF6F61 0%, #fb9033 100%) 0% 0% no-repeat padding-box;
+opacity: 1;
+margin: 16px 0;
+    border: none;
+    padding: 10px 21px;
+    border-radius: 5px;
+    color: white;
 }
 
-.list-group-horizontal {
-    flex-direction: row;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
+.landing-button{
+    color: #222222 !important;
 }
+.landing-button:hover{
+    color: #FC9E21 !important;
+    background: transparent !important;
+}
+.section-two-title{
+    color: var(--unnamed-color-ff6f61);
+text-align: center;
+font: normal normal 600 25px/60px Montserrat;
+letter-spacing: 0.63px;
+color: #FF6F61;
+text-transform: uppercase;
+margin-top: 100px;
+}
+.section-two-heading{
+    color: var(--unnamed-color-333333);
+text-align: center;
+font: normal normal bold 36px/60px Montserrat;
+letter-spacing: 0px;
+color: #333333;
+text-transform: uppercase;
+margin-bottom: 35px;
 
-.Call_Wrapper{
-    display: inline-flex;
-    justify-content: space-between;
 }
-.schedule_btn{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 26px 10px 25px;
-    background: #238A43;
-    border-radius: 1px;
-    color: white !important;
-    text-decoration: none;
-    margin-right: 23px;
+.coloum-box{
+    margin: 42px;
+    background: #ffffff;
+    color: black;
+    border-radius: 5px;
+    padding: 40px;
+    height: 246px;
+    text-align: center;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+    box-shadow: 0 0px 0px 0 rgb(0 0 0 / 1%), 0 -1px 7px 0 rgb(6 0 0 / 22%);
 }
-.schedule_btn a{
- color: #ffffff;
- text-decoration: none;
-}
+.icon-name{
+    margin-top: 25px;
+    font-size: 18px;
+    padding: 0 50px;
+    text-align: center;
    
-.schedule_btn button{
-    background: #238A43;
-    border-radius: 1px;
-    border: none;
-    letter-spacing: 0.15em;
-    font-family: 'Bebas Neue';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 140%;
-    text-transform: uppercase;
-    position: static;
-    color: #FFFFFF !important;
 }
-.Content_planner_wrapper{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #FFEFD7;
-    margin: 0px 10px;
+.btn-light{
+    margin-top: 10px;
+    color:#FF6F61 !important;
+    background: white !important;
 }
+.active{
+    background: transparent url('./img/Rectangle\ 72.svg') 0% 0% no-repeat padding-box;
+    box-shadow: none;
+border-radius: 5px;
+color: white;
 
-.Content_planner_wrapper input{
-    cursor: pointer;
-    width: 50px;
-    border: none;
-    outline: none;
-    background-color: transparent;
-}
 
-.Content_planner_wrapper .content_text {
-    color: #fff;
-    background-color: #fff;
-    padding: 15px 5px;
-    display: inline-block;
-    margin-right: 10px;
-    text-align: center;
-    margin-left: 20px;
+
 }
-.Content_planner_wrapper .content_text p{
-    font-family: inherit;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 100%;
-    text-transform: uppercase;
-    color: #3D3D3D;
-    text-align: center;
+.booking-box{
+    background-image: linear-gradient(to right,#FC9E21,#FF6F61, #FE2983);
+    border-radius: 20px;
     padding: 10px;
-    margin: 0px;
 }
-.list-group{
-    width: 69%;
-    margin-bottom: 20px !important       ;
+.booking-content{
+    padding: 15px 0px;
 }
-.list-2{
-    width: 100% !important;
+.booking-content >h3{
+text-align: left;
+font: normal normal medium 22px/60px Montserrat;
+letter-spacing: 0.55px;
+color: #FFFFFF;
+text-transform: uppercase;
 }
-.banner img{
-    border-radius: 0px;
+.booking-content >h2{
+    text-align: left;
+font: normal normal bold 36px/60px Montserrat;
+letter-spacing: 0.9px;
+color: #FFFFFF;
+text-transform: uppercase;
 }
-.contant_heading{
-    text-decoration-line: underline;
-    text-transform: uppercase;
-    font-family: 'Bebas Neue';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 44px;
-    line-height: 120%;
-    color: #238A43;
-
+.book-consultation{
+    padding: 10px !important;
+    margin: 5px;
+    background: white !important;
+    color: #FC9E21 !important;
+    font-size: 25px !important;
 }
-.contant_heading p{
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 170%;
-    color: #3D3D3D;
+.special{
+    background-image: linear-gradient(to right,#FC9E21,#FF6F61, #FE2983) !important;
+    /* box-shadow: none; */
+    border-radius: 5px !important;
+    color: white !important;
+    padding: 10px 25px !important;
 }
-.items_list{
-    font-family: 'Raleway';
-    font-size: 20px;
-    line-height: 170%;
-    color: #3D3D3D;
-    
-}
-.items_list li{
-    float: left;
-    width: 50%;
+.landing-button-2{
+    color: #ffffff !important;
 }
 
-.body_content{
-    width: 50% !important;
-    padding: 0;
-    margin-top: 20% !important;
-}
 
-.body_content_heading {
-    font-family: 'Bebas Neue';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 100px;
-    line-height: 110px;
-    text-transform: uppercase;
-    color: #3D3D3D;
-}
-.body_content_text{
-    font-family: 'Raleway';
-font-style: normal;
-font-weight: 500;
-font-size: 30px;
-line-height: 170%;
-color: #3D3D3D;
-}
-/* Media query */
-@media screen and (max-width: 1200px){
-    .navbar-nav {
-        padding-right: 0;
-    }
-    .nav-link {
-        font-size: 16px;
-        line-height: 36px;
-        letter-spacing: 0em;
-        text-align: left;
-        padding-right: 2px !important;
-    }
-    .jumbotron >h1 {
-        font-size: 120px;
-        line-height: 115px;
-        margin: 11px 0px;
-    }
 
-    .card_wrapper {
-        position: absolute;
-        top: 422px !important;
-        padding: 0px 6%;
-    }
-    .body_content_heading {
-        font-size: 120px;
-        line-height: 115px;
-        margin: 11px 0px;
-        font-variant: all-small-caps;
-    }
-     .body_content_text {
-        font-size: 24px;
-        line-height: 150%;
-    }
-    .img-text {
-        font-size: 36px !important;
-    }
-    .img-text-desc {
-        font-size: 16px;
-        line-height: 160%;
-        margin: 15px 0px;
-    }
-    .items_list {
-        font-size: 16px;
-        line-height: 160%;
-        display: table-footer-group;
-    }
-    .list-group {
-        width: 100%;
-        margin-bottom: 20px !important;
-    }
-    .Call_Wrapper {
-        display: inline-flex;
-        justify-content: flex-start;
-        flex-wrap: wrap;
-    }
-    .Content_planner_wrapper {
-        margin: 12px 0px;
-    }
-    .img-2 {
-        transform: rotate(20deg);
-        width: 26%;
-        height: 103%;
-        left: 58%;
-        top: -50%;
-    }
-    .container, .container-md, .container-sm {
-        max-width: 900px !important;
-    }
+
 }
 @media screen and (max-width: 980px){
-    .jumbotron >h1 {
-        font-size: 80px;
-        line-height: 100px;
-        margin: 10px 0px;
-    }
-    .body_content_heading{
-        font-size: 80px;
-        line-height: 100px;
-        margin: 10px 0px;
-    }
-    .card_wrapper {
-        position: absolute;
-        top: 295px !important;
-        padding: 0px 5%;
-    }
-  
-    .body_content_text {
-        font-size: 22px;
-        line-height: 120%;
-    }
-    .img-text {
-        font-size: 24px !important;
-    }
-    .img-text-desc {
-        font-size: 14px;
-        line-height: 140%;
-        margin: 10px 0px;
-    }
-    .items_list {
-        font-size: 14px;
-        display: table-footer-group;
-    }
-    .items_list li {
-        float: none;
-        width: 100%;
-        margin: 0 16px;
-    }
-    .Content_planner_wrapper .content_text {
-        padding: 0px 0px;
-        margin-left: 20px;
-    }
-    .schedule_btn {
-        margin: 0px;
-        padding: 12px 0;
-    }
-    .img-2 {
-        width: 29%;
-        height: 118%;
-    }
-    .img-1 {
-        width: 700px;
-        height: 1065px;
-        left: -587px;
-        top: -146px;
-    }
-    .container, .container-md, .container-sm {
-        max-width: 850px !important;
-    }
+       
 }
 @media screen and (max-width: 768px){
-    .jumbotron >h1 {
-        font-size: 60px;
-        line-height: 67px;
-        margin: 0px 0px;
-    }
-    .body_content_heading {
-        font-size: 60px;
-        line-height: 67px;
-        margin: 0px 0px;
-    }
-    .body_content {
-        display: none;
-    }
-    .img-2 {
-        display: none;
-    }
-    .navbar-nav {
-        align-items: center;
-    }
-    
-
+      
 }
 @media only screen and (max-width: 480px){
-    .navbar-nav {
-        align-items: center;
-    }
-    .jumbotron >h1{
-        font-size: 70px;
-        line-height: 79px;
-        margin: 0px 0px;
-    }
-    .body_content_heading{
-        font-size: 70px;
-        line-height: 79px;
-        margin: 0px 0px;
-    }
-    .jumbotron{
-        text-align: center;
-    }
-    
     
 }
